--- a/src/main/resources/ToDo.txt
+++ b/src/main/resources/ToDo.txt
@@ -1,6 +1,6 @@
-- Programmet ska följa spelreglerna för Fyra i rad.
-- Programmet ska avgöra och berätta när en spelare har vunnit en omgång.
-- Programmet skall slumpa fram vem som startar.
+X Programmet ska följa spelreglerna för Fyra i rad.
+X Programmet ska avgöra och berätta när en spelare har vunnit en omgång.
+X Programmet skall slumpa fram vem som startar.
 - Programmet skall spela in alla drag så att man i efterhand kan återskapa förloppet för vidare
   analys över hur man spelade.
 - Det ska gå att spela upp en ”omgång”
