--- a/src/main/resources/ToDo.txt
+++ b/src/main/resources/ToDo.txt
@@ -1,8 +1,8 @@
 X Programmet ska följa spelreglerna för Fyra i rad.
 X Programmet ska avgöra och berätta när en spelare har vunnit en omgång.
 X Programmet skall slumpa fram vem som startar.
-- Programmet skall spela in alla drag så att man i efterhand kan återskapa förloppet för vidare
+X Programmet skall spela in alla drag så att man i efterhand kan återskapa förloppet för vidare
   analys över hur man spelade.
-- Det ska gå att spela upp en ”omgång”
-- Man ska kunna välja hur många omgångar som ska spelas. När en spelare har vunnit
+X Det ska gå att spela upp en ”omgång”
+X Man ska kunna välja hur många omgångar som ska spelas. När en spelare har vunnit
   tillräckligt många omgångar ska programmet skriva ut vem som vann.
