--- a/src/main/resources/ToDo.txt
+++ b/src/main/resources/ToDo.txt
@@ -8,3 +8,4 @@ X Man ska kunna välja hur många omgångar som ska spelas. När en spelare har 
   tillräckligt många omgångar ska programmet skriva ut vem som vann.
 - Testa IO
 - Menyval töm filen "fileName.txt" + döp om den
+X Ta bort target från Git
